--- a/index.html
+++ b/index.html
@@ -7,7 +7,34 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  
+  <h1>Calculator</h1>
+  <div class="container">
+    <div class="display">1 + 2</div>
+    <div class="row">
+      <button>1</button>
+      <button>2</button>
+      <button>3</button>
+      <button>+</button>
+    </div>
+    <div class="row">
+      <button>4</button>
+      <button>5</button>
+      <button>6</button>
+      <button>-</button>
+    </div>
+    <div class="row">
+      <button>7</button>
+      <button>8</button>
+      <button>9</button>
+      <button>*</button>
+    </div>
+    <div class="row">
+      <button>=</button>
+      <button>0</button>
+      <button>Clear</button>
+      <button>/</button>
+    </div>
+  </div>
   <script src="script.js"></script>
 </body>
 </html>
