--- a/index.html
+++ b/index.html
@@ -9,30 +9,30 @@
 <body>
   <h1>Calculator</h1>
   <div class="container">
-    <div class="display">1 + 2</div>
+    <div class="display"></div>
     <div class="row">
-      <button>1</button>
-      <button>2</button>
-      <button>3</button>
-      <button>+</button>
+      <button class="number">1</button>
+      <button class="number">2</button>
+      <button class="number">3</button>
+      <button class="operator">+</button>
     </div>
     <div class="row">
-      <button>4</button>
-      <button>5</button>
-      <button>6</button>
-      <button>-</button>
+      <button class="number">4</button>
+      <button class="number">5</button>
+      <button class="number">6</button>
+      <button class="operator">-</button>
     </div>
     <div class="row">
-      <button>7</button>
-      <button>8</button>
-      <button>9</button>
-      <button>*</button>
+      <button class="number">7</button>
+      <button class="number">8</button>
+      <button class="number">9</button>
+      <button class="operator">*</button>
     </div>
     <div class="row">
-      <button>=</button>
-      <button>0</button>
-      <button>Clear</button>
-      <button>/</button>
+      <button class="clear">Clear</button>
+      <button class="number">0</button>
+      <button class="equal">=</button>
+      <button class="operator">/</button>
     </div>
   </div>
   <script src="script.js"></script>
