--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <h1>Calculator</h1>
   <div class="container">
-    <div class="display"></div>
+    <div class="display">0</div>
     <div class="row">
       <button class="number">1</button>
       <button class="number">2</button>
