--- a/index.html
+++ b/index.html
@@ -11,28 +11,32 @@
   <div class="container">
     <div class="display">0</div>
     <div class="row">
-      <button class="number">1</button>
-      <button class="number">2</button>
-      <button class="number">3</button>
-      <button class="operator">+</button>
-    </div>
-    <div class="row">
-      <button class="number">4</button>
-      <button class="number">5</button>
-      <button class="number">6</button>
-      <button class="operator">-</button>
-    </div>
-    <div class="row">
+      <button class="">%</button>
       <button class="number">7</button>
       <button class="number">8</button>
       <button class="number">9</button>
-      <button class="operator">*</button>
+      <button class="operator">&div;</button>
     </div>
     <div class="row">
-      <button class="clear">Clear</button>
+      <button class="">+/&minus;</button>
+      <button class="number">4</button>
+      <button class="number">5</button>
+      <button class="number">6</button>
+      <button class="operator">&times;</button>
+    </div>
+    <div class="row">
+      <button class="all-clear">AC</button>
+      <button class="number">1</button>
+      <button class="number">2</button>
+      <button class="number">3</button>
+      <button class="operator">&minus;</button>
+    </div>
+    <div class="row">
+      <button class="clear">C</button>
       <button class="number">0</button>
+      <button class="decimal">&#8729;</button>
       <button class="equal">=</button>
-      <button class="operator">/</button>
+      <button class="operator">+</button>
     </div>
   </div>
   <script src="script.js"></script>
