--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <button class="operator" data-opt="/">&div;</button>
     </div>
     <div class="row">
-      <button class="operator">+/&minus;</button>
+      <button class="negative">+/&minus;</button>
       <button class="number">4</button>
       <button class="number">5</button>
       <button class="number">6</button>
