Add data-key for buttons

--- a/index.html
+++ b/index.html
@@ -11,32 +11,32 @@
   <div class="container">
     <div class="display">0</div>
     <div class="row">
-      <button class="percent">%</button>
-      <button class="number">7</button>
-      <button class="number">8</button>
-      <button class="number">9</button>
-      <button class="operator" data-opt="/">&div;</button>
+      <button class="percent" data-key="%">%</button>
+      <button class="number" data-key="7">7</button>
+      <button class="number" data-key="8">8</button>
+      <button class="number" data-key="9">9</button>
+      <button class="operator" data-key="/">&div;</button>
     </div>
     <div class="row">
-      <button class="negative">+/&minus;</button>
-      <button class="number">4</button>
-      <button class="number">5</button>
-      <button class="number">6</button>
-      <button class="operator" data-opt="*">&times;</button>
+      <button class="negative" data-key="n">+/&minus;</button>
+      <button class="number" data-key="4">4</button>
+      <button class="number" data-key="5">5</button>
+      <button class="number" data-key="6">6</button>
+      <button class="operator" data-key="*">&times;</button>
     </div>
     <div class="row">
-      <button class="all-clear">AC</button>
-      <button class="number">1</button>
-      <button class="number">2</button>
-      <button class="number">3</button>
-      <button class="operator" data-opt="-">&minus;</button>
+      <button class="all-clear" data-key="c">AC</button>
+      <button class="number" data-key="1">1</button>
+      <button class="number" data-key="2">2</button>
+      <button class="number" data-key="3">3</button>
+      <button class="operator" data-key="-">&minus;</button>
     </div>
     <div class="row">
-      <button class="clear">C</button>
-      <button class="number">0</button>
-      <button class="decimal">&#8729;</button>
-      <button class="equal">=</button>
-      <button class="operator" data-opt="+">+</button>
+      <button class="clear" data-key="backspace">C</button>
+      <button class="number" data-key="0">0</button>
+      <button class="decimal" data-key=".">&#8729;</button>
+      <button class="equal" data-key="=">=</button>
+      <button class="operator" data-key="+">+</button>
     </div>
   </div>
   <script src="script.js"></script>
